# arduino

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/Henry/: Arduino.hpp
include/HENRY/: arduino.hpp
include/arduino/: arduino.hpp
include/template/: template.hpp
src/: Arduino.cpp  Arduino.hpp  CMakeLists.txt  LinuxArduino.cpp  linux_arduino.cpp
src/core/: Arduino.cpp  arduino.cpp
src/plat/: LinuxArduino.cpp  WindowsArduino.cpp
src/plat/linux/: linux_arduino.cpp
test/: CMakeLists.txt  master_test.cpp
tests/: CMakeLists.txt  master_test.cpp
